@@ -1,7 +1,6 @@
 package com.sprint.mission.discodeit.service.basic;
 
-import com.sprint.mission.discodeit.dto.BinaryContentDto.BinaryContentCreateDto;
-import com.sprint.mission.discodeit.dto.BinaryContentDto.BinaryContentResponseDto;
+import com.sprint.mission.discodeit.dto.BinaryContentDto.*;
 import com.sprint.mission.discodeit.entity.BinaryContent;
 import com.sprint.mission.discodeit.mapper.BinaryContentMapper;
 import com.sprint.mission.discodeit.repository.BinaryContentRepository;
@@ -12,7 +11,6 @@ import org.springframework.stereotype.Service;
 import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -22,24 +20,27 @@ public class BasicBinaryContentService implements BinaryContentService {
     private final BinaryContentMapper binaryContentMapper;
 
     @Override
-    public BinaryContentResponseDto create(BinaryContentCreateDto dto) {
-        BinaryContent content = binaryContentMapper.binaryContentCreateDtoToBinaryContent(dto);
-        return binaryContentMapper.entityToDto(binaryContentRepository.save(content));
+    public BinaryContentResponse create(BinaryContentRequest dto) {
+        BinaryContent content = binaryContentMapper.toEntity(null, null, dto);
+
+        BinaryContent saved = binaryContentRepository.save(content);
+
+        return binaryContentMapper.toResponse(saved);
     }
 
     @Override
-    public BinaryContentResponseDto find(UUID id) {
+    public BinaryContentResponse findById(UUID id) {
         BinaryContent content = binaryContentRepository.findById(id)
                 .orElseThrow(() -> new NoSuchElementException("BinaryContent not found : " + id));
-        return binaryContentMapper.entityToDto(content);
+        return binaryContentMapper.toResponse(content);
     }
 
     @Override
-    public List<BinaryContentResponseDto> findAllByIdIn(List<UUID> ids) {
+    public List<BinaryContentResponse> findAllByIdIn(List<UUID> ids) {
         return binaryContentRepository.findAll().stream()
                 .filter(content -> ids.contains(content.getId()))
-                .map(binaryContentMapper::entityToDto)
-                .collect(Collectors.toList());
+                .map(binaryContentMapper::toResponse)
+                .toList();
     }
 
     @Override
